updating some functions