@@ -13,5 +13,8 @@ function export-custom-system-properties() {
   export PATH=$PATH:$NPM_BIN_PATH
   export PATH=$PATH:$OPENSSL_PATH
 
-  export FLEX_IP=10.13.1.50
+  export FLEX_IP=$(ifconfig en0 | awk '/inet /{print $2}')
+  echo "FLEX_IP = '$FLEX_IP'"
+
+  export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
 }
